--- a/Provider/src/SpyMasterApi.Pact/Properties/launchSettings.json
+++ b/Provider/src/SpyMasterApi.Pact/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PeopleStoreApi.Pact": {
+    "SpyMasterApi.Pact": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
